--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/riz1-lv/Forum-me#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.41",
     "typescript": "^4.2.4"
   },
@@ -29,10 +30,14 @@
     "@mikro-orm/core": "^4.5.3",
     "@mikro-orm/migrations": "^4.5.3",
     "@mikro-orm/postgresql": "^4.5.3",
+    "apollo-server-express": "^2.23.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
