--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@mikro-orm/core": "^4.5.3",
     "@mikro-orm/migrations": "^4.5.3",
     "@mikro-orm/postgresql": "^4.5.3",
+    "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.23.0",
+    "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
