--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
     "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js"
+    "dev": "nodemon dist/index.js",
+    "create:migration": "mikro-orm migration:create"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "@mikro-orm/postgresql": "^4.5.3",
     "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.23.0",
+    "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
