--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/riz1-lv/Forum-me#readme",
   "devDependencies": {
+    "@types/connect-pg-simple": "^4.2.2",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.41",
     "typescript": "^4.2.4"
   },
@@ -35,8 +37,10 @@
     "apollo-server-express": "^2.23.0",
     "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
+    "connect-pg-simple": "^6.2.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
