--- a/forum-backend/package.json
+++ b/forum-backend/package.json
@@ -33,11 +33,13 @@
     "@mikro-orm/core": "^4.5.3",
     "@mikro-orm/migrations": "^4.5.3",
     "@mikro-orm/postgresql": "^4.5.3",
+    "@types/cors": "^2.8.10",
     "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.23.0",
     "argon2": "^0.27.2",
     "class-validator": "^0.13.1",
     "connect-pg-simple": "^6.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
