added login functionality

--- a/forum-frontend/tsconfig.json
+++ b/forum-frontend/tsconfig.json
@@ -8,6 +8,15 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
+    "removeComments": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
