--- a/forum-frontend/tsconfig.json
+++ b/forum-frontend/tsconfig.json
@@ -9,7 +9,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "removeComments": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
