--- a/forum-backend/package.json
+++ b/forum-backend/package.json
@@ -27,6 +27,7 @@
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.41",
     "@types/nodemailer": "^6.4.1",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
@@ -50,7 +51,8 @@
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "mikro-orm": {
     "useTsNode": true,
