--- a/forum-backend/package.json
+++ b/forum-backend/package.json
@@ -36,6 +36,7 @@
     "@mikro-orm/migrations": "^4.5.3",
     "@mikro-orm/postgresql": "^4.5.3",
     "@types/cors": "^2.8.10",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/validator": "^13.1.3",
     "apollo-server-express": "^2.23.0",
     "argon2": "^0.27.2",
@@ -46,6 +47,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
